- Shallow evaluation of Deep terms  - Gradle wrapper update to 7.5 to support SDK 18  - preview gradle compiler feature enabled